# droneCFD

./: MODERNIZATION_SUMMARY.md  README.md  pyproject.toml  setup.py
droneCFD/: Meshing.py  PostProcessing.py  Solver.py  Utilities.py  Visualization.py  stlTools.py
examples/: aoa_sweep.py  single_run_example.py
